sync branch with remote repo