@@ -13,31 +13,32 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
-
 import org.opendaylight.transportpce.common.StringConstants;
 import org.opendaylight.yang.gen.v1.http.org.opendaylight.transportpce.olm.rev170418.ServicePowerSetupInput;
 import org.opendaylight.yang.gen.v1.http.org.opendaylight.transportpce.olm.rev170418.ServicePowerSetupInputBuilder;
-import org.opendaylight.yang.gen.v1.http.org.opendaylight.transportpce.renderer.device.rev170228.ServicePathInput;
-import org.opendaylight.yang.gen.v1.http.org.opendaylight.transportpce.renderer.device.rev170228.ServicePathInputBuilder;
+import org.opendaylight.yang.gen.v1.http.org.opendaylight.transportpce.renderer.device.rev200128.ServicePathInput;
+import org.opendaylight.yang.gen.v1.http.org.opendaylight.transportpce.renderer.device.rev200128.ServicePathInputBuilder;
 import org.opendaylight.yang.gen.v1.http.org.opendaylight.transportpce.renderer.rev171017.ServiceDeleteOutput;
 import org.opendaylight.yang.gen.v1.http.org.opendaylight.transportpce.renderer.rev171017.ServiceDeleteOutputBuilder;
 import org.opendaylight.yang.gen.v1.http.org.opendaylight.transportpce.renderer.rev171017.ServiceImplementationRequestInput;
 import org.opendaylight.yang.gen.v1.http.org.opendaylight.transportpce.renderer.rev171017.ServiceImplementationRequestOutput;
 import org.opendaylight.yang.gen.v1.http.org.opendaylight.transportpce.renderer.rev171017.ServiceImplementationRequestOutputBuilder;
-import org.opendaylight.yang.gen.v1.http.org.openroadm.common.service.types.rev161014.configuration.response.common.ConfigurationResponseCommon;
-import org.opendaylight.yang.gen.v1.http.org.openroadm.common.service.types.rev161014.configuration.response.common.ConfigurationResponseCommonBuilder;
-import org.opendaylight.yang.gen.v1.http.org.openroadm.service.rev161014.ServiceDeleteInput;
+import org.opendaylight.yang.gen.v1.http.org.openroadm.common.service.types.rev190531.configuration.response.common.ConfigurationResponseCommon;
+import org.opendaylight.yang.gen.v1.http.org.openroadm.common.service.types.rev190531.configuration.response.common.ConfigurationResponseCommonBuilder;
+import org.opendaylight.yang.gen.v1.http.org.openroadm.service.rev190531.ServiceDeleteInput;
 import org.opendaylight.yang.gen.v1.http.org.transportpce.b.c._interface.pathdescription.rev171017.PathDescription;
 import org.opendaylight.yang.gen.v1.http.org.transportpce.b.c._interface.pathdescription.rev171017.path.description.atoz.direction.AToZ;
 import org.opendaylight.yang.gen.v1.http.org.transportpce.b.c._interface.pathdescription.rev171017.path.description.ztoa.direction.ZToA;
 import org.opendaylight.yang.gen.v1.http.org.transportpce.b.c._interface.pathdescription.rev171017.pce.resource.resource.resource.TerminationPoint;
-import org.opendaylight.yang.gen.v1.http.org.transportpce.common.types.rev170907.olm.renderer.input.Nodes;
-import org.opendaylight.yang.gen.v1.http.org.transportpce.common.types.rev170907.olm.renderer.input.NodesBuilder;
-import org.opendaylight.yang.gen.v1.http.org.transportpce.common.types.rev170907.olm.renderer.input.NodesKey;
+import org.opendaylight.yang.gen.v1.http.org.transportpce.common.types.rev200128.olm.renderer.input.Nodes;
+import org.opendaylight.yang.gen.v1.http.org.transportpce.common.types.rev200128.olm.renderer.input.NodesBuilder;
+import org.opendaylight.yang.gen.v1.http.org.transportpce.common.types.rev200128.olm.renderer.input.NodesKey;
 import org.opendaylight.yangtools.yang.common.RpcResult;
 import org.opendaylight.yangtools.yang.common.RpcResultBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+
 
 public final class ModelMappingUtils {
 
@@ -49,28 +50,32 @@ public final class ModelMappingUtils {
 
     public static ServicePowerSetupInput createServicePowerSetupInput(List<Nodes> olmList,
         ServiceImplementationRequestInput input) {
-        ServicePowerSetupInputBuilder olmSetupBldr = new ServicePowerSetupInputBuilder();
-        olmSetupBldr.setNodes(olmList);
-        olmSetupBldr.setWaveNumber(input.getPathDescription().getAToZDirection().getAToZWavelengthNumber());
+        ServicePowerSetupInputBuilder olmSetupBldr = new ServicePowerSetupInputBuilder()
+            .setNodes(olmList);
+        if (input != null && input.getPathDescription() != null
+                && input.getPathDescription().getAToZDirection() != null) {
+            olmSetupBldr.setWaveNumber(
+                    input.getPathDescription().getAToZDirection().getAToZWavelengthNumber());
+        }
         return olmSetupBldr.build();
     }
 
     public static ServiceImplementationRequestOutput createServiceImplResponse(String responseCode, String message) {
-        ServiceImplementationRequestOutputBuilder outputBldr = new ServiceImplementationRequestOutputBuilder();
-        outputBldr.setConfigurationResponseCommon(createCommonResponse(responseCode, message));
+        ServiceImplementationRequestOutputBuilder outputBldr = new ServiceImplementationRequestOutputBuilder()
+            .setConfigurationResponseCommon(createCommonResponse(responseCode, message));
         return outputBldr.build();
     }
 
     public static ServiceDeleteOutput createServiceDeleteResponse(String responseCode, String message) {
-        ServiceDeleteOutputBuilder outputBldr = new ServiceDeleteOutputBuilder();
-        outputBldr.setConfigurationResponseCommon(createCommonResponse(responseCode, message));
+        ServiceDeleteOutputBuilder outputBldr = new ServiceDeleteOutputBuilder()
+            .setConfigurationResponseCommon(createCommonResponse(responseCode, message));
         return outputBldr.build();
     }
 
     public static ConfigurationResponseCommon createCommonResponse(String responseCode, String message) {
-        ConfigurationResponseCommonBuilder cmBldr = new ConfigurationResponseCommonBuilder();
-        cmBldr.setResponseMessage(message);
-        cmBldr.setResponseCode(responseCode);
+        ConfigurationResponseCommonBuilder cmBldr = new ConfigurationResponseCommonBuilder()
+            .setResponseMessage(message)
+            .setResponseCode(responseCode);
         return cmBldr.build();
     }
 
@@ -85,32 +90,31 @@ public final class ModelMappingUtils {
     }
 
     public static ServicePathInputData rendererCreateServiceInputAToZ(String serviceName,
-        PathDescription pathDescription) {
-        ServicePathInputBuilder servicePathInputBuilder = new ServicePathInputBuilder();
-        servicePathInputBuilder.setServiceName(serviceName);
+            PathDescription pathDescription) {
         NodeLists nodeLists = getNodesListAToZ(pathDescription.getAToZDirection().getAToZ().iterator());
-        servicePathInputBuilder.setServiceName(serviceName);
-        servicePathInputBuilder.setOperation(ServicePathInput.Operation.Create);
-        servicePathInputBuilder.setWaveNumber(new Long(pathDescription.getAToZDirection().getAToZWavelengthNumber()));
-        servicePathInputBuilder.setNodes(nodeLists.getList());
+        ServicePathInputBuilder servicePathInputBuilder = new ServicePathInputBuilder()
+            .setServiceName(serviceName)
+            .setOperation(ServicePathInput.Operation.Create)
+            .setWaveNumber(Long.valueOf(pathDescription.getAToZDirection().getAToZWavelengthNumber().toJava()))
+            .setNodes(nodeLists.getList());
         return new ServicePathInputData(servicePathInputBuilder.build(), nodeLists);
     }
 
     public static ServicePathInputData rendererCreateServiceInputZToA(String serviceName,
-        PathDescription pathDescription) {
-        ServicePathInputBuilder servicePathInputBuilder = new ServicePathInputBuilder();
+            PathDescription pathDescription) {
         NodeLists nodeLists = getNodesListZtoA(pathDescription.getZToADirection().getZToA().iterator());
-        servicePathInputBuilder.setOperation(ServicePathInput.Operation.Create);
-        servicePathInputBuilder.setServiceName(serviceName);
-        servicePathInputBuilder.setWaveNumber(new Long(pathDescription.getZToADirection().getZToAWavelengthNumber()));
-        servicePathInputBuilder.setNodes(nodeLists.getList());
+        ServicePathInputBuilder servicePathInputBuilder = new ServicePathInputBuilder()
+            .setOperation(ServicePathInput.Operation.Create)
+            .setServiceName(serviceName)
+            .setWaveNumber(Long.valueOf(pathDescription.getZToADirection().getZToAWavelengthNumber().toJava()))
+            .setNodes(nodeLists.getList());
         return new ServicePathInputData(servicePathInputBuilder.build(), nodeLists);
     }
 
     public static ServicePathInput rendererDeleteServiceInput(String serviceName,
-        ServiceDeleteInput serviceDeleteInput) {
-        ServicePathInputBuilder servicePathInput = new ServicePathInputBuilder();
-        servicePathInput.setServiceName(serviceName);
+            ServiceDeleteInput serviceDeleteInput) {
+        ServicePathInputBuilder servicePathInput = new ServicePathInputBuilder()
+            .setServiceName(serviceName);
         //TODO: finish model-model mapping
         return servicePathInput.build();
     }
@@ -126,7 +130,7 @@ public final class ModelMappingUtils {
         String sortId = "";
         while (iterator.hasNext()) {
             ZToA pathDesObj = iterator.next();
-            resourceType = pathDesObj.getResource().getResource().getImplementedInterface().getSimpleName();
+            resourceType = pathDesObj.getResource().getResource().implementedInterface().getSimpleName();
             LOG.info("Inside ZtoA {}", resourceType);
 
             try {
@@ -148,44 +152,22 @@ public final class ModelMappingUtils {
                     }
 
                     int[] pos = findTheLongestSubstring(nodeID, tpID);
-                    //TODO: do not rely on nodeId to be integer
-                    int id = Integer.parseInt(sortId);
-                    treeMap.put(id, new NodeIdPair(nodeID.substring(0, pos[0] - 1), tpID));
-                } else if (resourceType.equals("Link")) {
+                    if (pos != null) {
+                        //TODO: do not rely on nodeId to be integer
+                        int id = Integer.parseInt(sortId);
+                        treeMap.put(id, new NodeIdPair(nodeID.substring(0, pos[0] - 1), tpID));
+                    }
+                } else if ("Link".equals(resourceType)) {
                     LOG.info("The type is link");
                 } else {
                     LOG.info("The type is not indentified: {}", resourceType);
                 }
             } catch (IllegalArgumentException | SecurityException e) {
-                // TODO Auto-generated catch block
                 LOG.error("Dont find the getResource method", e);
             }
         }
 
-        String desID = null;
-        String srcID = null;
-        for (NodeIdPair values : treeMap.values()) {
-            if (srcID == null) {
-                srcID = values.getTpID();
-            } else if (desID == null) {
-                desID = values.getTpID();
-                NodesBuilder nb = new NodesBuilder();
-                nb.withKey(new NodesKey(values.getNodeID()));
-                nb.setDestTp(desID);
-                nb.setSrcTp(srcID);
-                list.add(nb.build());
-
-                NodesBuilder olmNb = new NodesBuilder();
-                olmNb.setNodeId(values.getNodeID());
-                olmNb.setDestTp(desID);
-                olmNb.setSrcTp(srcID);
-                olmList.add(olmNb.build());
-                srcID = null;
-                desID = null;
-            } else {
-                LOG.warn("both, the source and destination id are null!");
-            }
-        }
+        populateNodeLists(treeMap, list, olmList);
         return new NodeLists(olmList, list);
     }
 
@@ -201,7 +183,7 @@ public final class ModelMappingUtils {
 
         while (iterator.hasNext()) {
             AToZ pathDesObj = iterator.next();
-            resourceType = pathDesObj.getResource().getResource().getImplementedInterface().getSimpleName();
+            resourceType = pathDesObj.getResource().getResource().implementedInterface().getSimpleName();
             LOG.info("Inside AtoZ {}", resourceType);
             try {
                 if (TERMINATION_POINT.equals(resourceType)) {
@@ -224,10 +206,12 @@ public final class ModelMappingUtils {
                     }
 
                     int[] pos = findTheLongestSubstring(nodeID, tpID);
-                    //TODO: do not rely on nodeId to be integer
-                    int id = Integer.parseInt(sortId);
-                    treeMap.put(id, new NodeIdPair(nodeID.substring(0, pos[0] - 1), tpID));
-                } else if (resourceType.equals("Link")) {
+                    if (pos != null) {
+                        //TODO: do not rely on nodeId to be integer
+                        int id = Integer.parseInt(sortId);
+                        treeMap.put(id, new NodeIdPair(nodeID.substring(0, pos[0] - 1), tpID));
+                    }
+                } else if ("Link".equals(resourceType)) {
                     LOG.info("The type is link");
                 } else {
                     LOG.info("The type is not indentified: {}", resourceType);
@@ -238,6 +222,16 @@ public final class ModelMappingUtils {
             }
         }
 
+        populateNodeLists(treeMap, list, olmList);
+        return new NodeLists(olmList, list);
+    }
+
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(
+            value = {"NP_LOAD_OF_KNOWN_NULL_VALUE","RCN_REDUNDANT_NULLCHECK_OF_NULL_VALUE"},
+            justification = "loop when value is not always null - "
+                    + "TODO: check if something exists in Java lib")
+    private static void populateNodeLists(Map<Integer, NodeIdPair> treeMap,
+            List<Nodes> list, List<Nodes> olmList) {
         String desID = null;
         String srcID = null;
         for (NodeIdPair values : treeMap.values()) {
@@ -245,16 +239,16 @@ public final class ModelMappingUtils {
                 srcID = values.getTpID();
             } else if (desID == null) {
                 desID = values.getTpID();
-                NodesBuilder nb = new NodesBuilder();
-                nb.withKey(new NodesKey(values.getNodeID()));
-                nb.setDestTp(desID);
-                nb.setSrcTp(srcID);
+                NodesBuilder nb = new NodesBuilder()
+                    .withKey(new NodesKey(values.getNodeID()))
+                    .setDestTp(desID)
+                    .setSrcTp(srcID);
                 list.add(nb.build());
 
-                NodesBuilder olmNb = new NodesBuilder();
-                olmNb.setNodeId(values.getNodeID());
-                olmNb.setDestTp(desID);
-                olmNb.setSrcTp(srcID);
+                NodesBuilder olmNb = new NodesBuilder()
+                    .setNodeId(values.getNodeID())
+                    .setDestTp(desID)
+                    .setSrcTp(srcID);
                 olmList.add(olmNb.build());
                 srcID = null;
                 desID = null;
@@ -262,9 +256,12 @@ public final class ModelMappingUtils {
                 LOG.warn("both, the source and destination id are null!");
             }
         }
-        return new NodeLists(olmList, list);
     }
 
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(
+            value = "PZLA_PREFER_ZERO_LENGTH_ARRAYS",
+            justification = "not relevant to return and zero length array"
+                    + " as we need real pos")
     public static int[] findTheLongestSubstring(String s1, String s2) {
         if ((s1 == null) || (s2 == null)) {
             return null;
